correct navbar and footer alignment

--- a/src/app.css
+++ b/src/app.css
@@ -34,7 +34,7 @@ body {
 	line-height: 1.2;
 	margin: 0;
 	min-height: 100vh;
-	min-width: 100vw;
+	max-width: 100vw;
 	padding: 0;
 	position: relative;
 }
